--- a/QBO Events Management/Views/Events/Delete.cshtml
+++ b/QBO Events Management/Views/Events/Delete.cshtml
@@ -32,6 +32,14 @@
         </dt>
 
         <dd>
+            @Html.DisplayFor(model => model.Time)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Time)
+        </dt>
+
+        <dd>
             @Html.DisplayFor(model => model.Date)
         </dd>
 
