--- a/QBO Events Management/Views/Events/Index.cshtml
+++ b/QBO Events Management/Views/Events/Index.cshtml
@@ -21,6 +21,9 @@
             @Html.DisplayNameFor(model => model.Date)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Time)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Venue)
         </th>
         <th></th>
@@ -36,6 +39,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Date)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Time)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Venue)
