--- a/QBO Events Management/Views/Account/Login.cshtml
+++ b/QBO Events Management/Views/Account/Login.cshtml
@@ -2,6 +2,7 @@
 @model LoginViewModel
 
 @Styles.Render("~/Content/css")
+@Styles.Render("~/Content/additional/qbo.css")
 @{
     ViewBag.Title = "Welcome to QBO";
 }
@@ -50,29 +51,13 @@
                         @*<input type="submit" id="login" value="Login" class="btn btn-default" />*@
                         <button id="login" class="btn btn-default">Login</button>
                     </div>
-                </div>}
-            @* <p>
-                       @Html.ActionLink("Register as a new user", "Register")
-                   </p>
-                Enable this once you have account confirmation enabled for password reset functionality
-                       <p>
-                           @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                       </p>*@
+                </div>
+            }
+            
         </section>
-
-    
-
-
     </div>
 </div>
 
-   @* <div class="col-md-4">
-    <section id="socialLoginForm">
-        @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-
-    </div>
-  *@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
