--- a/QBO Events Management/Views/Events/Delete.cshtml
+++ b/QBO Events Management/Views/Events/Delete.cshtml
@@ -50,6 +50,12 @@
         <dd>
             @Html.DisplayFor(model => model.Venue)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Status)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Status)
+        </dd>
 
     </dl>
 
