--- a/QBO Events Management/Views/Events/Details.cshtml
+++ b/QBO Events Management/Views/Events/Details.cshtml
@@ -49,6 +49,12 @@
         <dd>
             @Html.DisplayFor(model => model.Venue)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Status)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Status)
+        </dd>
 
     </dl>
 </div>
