--- a/QBO Events Management/Content/additional/qboAdmin.css
+++ b/QBO Events Management/Content/additional/qboAdmin.css
@@ -49,13 +49,13 @@
 	width: 100px;
 }
 
-.title {
+/*.title {
 	text-align: center;
 	color: #03c4eb;
 	font-size: 40px;
 	font-weight: 800;
 	letter-spacing: 5px;
-}
+}*/
 
 .event input {
 	margin-top: 10px;
