--- a/QBO Events Management/Views/Shared/_AdminLayout.cshtml
+++ b/QBO Events Management/Views/Shared/_AdminLayout.cshtml
@@ -13,18 +13,29 @@
 </head>
 <body>
 
+
+
     <div class="navbar navbar-inverse navbar-fixed-left">
         <a class="navbar-brand" href="#">
             <img src="@Url.Content("~/Content/img/logo.png")" class="img-responsive" alt="Image" />
         </a>
         <ul class="nav navbar-nav">
-
+        @if (Request.IsAuthenticated)
+        {
+            using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+            {
+                @Html.AntiForgeryToken()
             <li><a href="#">Hello, @User.Identity.GetUserName() !</a></li>
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
             <li>@Html.ActionLink("Create Event", "Create")</li>
             <li>@Html.ActionLink("View Event", "Index")</li>
             <li><a href="#">Link5</a></li>
+            }
+        }
         </ul>
     </div>
+
+    
 
     <div class="container body-content">
         @RenderBody()
