--- a/QBO Events Management/Content/additional/qboAdmin.css
+++ b/QBO Events Management/Content/additional/qboAdmin.css
@@ -116,3 +116,9 @@ th {
 .table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
 	border-bottom: 1px solid #03c4eb;
 }
+
+label {
+	text-transform: uppercase;
+	font-weight:300;
+
+}
