--- a/QBO Events Management/Content/additional/qbo.css
+++ b/QBO Events Management/Content/additional/qbo.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
 
-body, #registerForm {
+body, #registerForm, #forgotpass {
+	color: #03c4eb;
 	background: black;
 	font-family: Raleway;
 	letter-spacing: 2px;
@@ -10,6 +11,8 @@ body, #registerForm {
 
 #loginForm {
 margin-top:100px;
+/*text-align:center;
+margin:auto;*/
 }
 
 #loginForm input, #registerForm input{
@@ -49,9 +52,15 @@ margin-top:100px;
 	width: 80%;
 }
 
+.fg label {
+	text-transform:none !important;
+	text-align:center;
+}
+
 .fg a {
 	color: #03c4eb;
-	text-decoration:none;
+	text-decoration: none;
+	text-align: center;
 }
 
 .fg a:hover {
@@ -64,3 +73,16 @@ margin-top:100px;
 	font-size: 12px;
 	font-weight: 300;
 }
+
+/*#forgotpass .form-group label {
+	color: #03c4eb !important;
+	font-size: 15px;
+}*/
+
+
+.panel-primary {
+	box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 8px 8px rgba(0,0,0,0.22);
+	border: none;
+	margin: 50px;
+}
+
