--- a/QBO Events Management/Views/Account/ForgotPassword.cshtml
+++ b/QBO Events Management/Views/Account/ForgotPassword.cshtml
@@ -1,25 +1,33 @@
 ﻿@model QBO_Events_Management.Models.ForgotPasswordViewModel
+
+
 @{
     ViewBag.Title = "Forgot your password?";
 }
 
-<h2>@ViewBag.Title.</h2>
+
+<br /><br /><br />
 
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+
+    <div id="forgotpass">
+        <img src="@Url.Content("~/Content/img/logo.png")" class="img-responsive" alt="Image" />
+        <h3 class="title">Forgot Password</h3>
+
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+
+                <button id="login" class="btn btn-default">Email Link</button>
+            </div>
         </div>
     </div>
 }
