--- a/QBO Events Management/Views/Account/Login.cshtml
+++ b/QBO Events Management/Views/Account/Login.cshtml
@@ -1,15 +1,13 @@
 ﻿@using QBO_Events_Management.Models
 @model LoginViewModel
 
-@Styles.Render("~/Content/css")
-@Styles.Render("~/Content/additional/qbo.css")
 @{
     ViewBag.Title = "Welcome to QBO";
 }
 
 
 <div class="row"> <!-- col-xs-12 col-md-4 col-md-offset-4 col-lg-offset-4 col-lg-4  -->
-    <div class="col-md-4 col-md-offset-4 login">
+    <div class="col-md-4 col-md-offset-4 login" align="center">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
@@ -35,10 +33,10 @@
 
                 <div class="form-group">
                     <div class="col-md-12 fg">
-                        <div class="checkbox">
+                        @*<div class="checkbox">
                             @Html.CheckBoxFor(m => m.RememberMe)
                             @Html.LabelFor(m => m.RememberMe)
-                        </div>
+                        </div>*@
                         <br />
                         <p> @Html.ActionLink("Forgot your password?", "ForgotPassword") </p>
                         @*<p><a href="" data-toggle="modal" data-target="#myModal">Register</a></p>*@ @*@Html.ActionLink("Register as a new user", "Register")*@  
@@ -48,7 +46,6 @@
 
                 <div class="form-group">
                     <div class="col-md-12">
-                        @*<input type="submit" id="login" value="Login" class="btn btn-default" />*@
                         <button id="login" class="btn btn-default">Login</button>
                     </div>
                 </div>
