--- a/QBO Events Management/Views/Events/Index.cshtml
+++ b/QBO Events Management/Views/Events/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h1 class="title">EVENTS</h1>
 
-<table class="table table-bordered table-hover">
+<table class="table table-bordered table-hover table-responsive">
     <thead>
         <tr>
             <th>
