--- a/QBO Events Management/Views/Events/ListOfEvents.cshtml
+++ b/QBO Events Management/Views/Events/ListOfEvents.cshtml
@@ -1,83 +1,76 @@
-﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+﻿@model IEnumerable<QBO_Events_Management.Models.EventList>
+
+@{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 
 
-<div class="container">
-    <div class="row">
-        <br><br>
-        <br><br>
+<div class="eventlist">
+    <br /><br /><br />
+    <table class="table table-bordered table-hover table-responsive">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.ID)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Names)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Descriptions)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Start)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.End)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Created)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Changed)
+                </th>           
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ID)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Names.Text)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Descriptions.Text)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Start.Local)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.End.Local)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Created)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Changed)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Attendees", "Attendees", new { id = item.ID }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.ID })
+                        </td>
+                    </tr>
+                }
+        </tbody>
 
-        <div class="eventlist">
-            <br><br>
-      
-            <div class="panel panel-primary">
-                <a href="#">
-                    <div class="panel-body">
-                        <div class="row">
-                            <!--    col-sm-8  -->
-                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                                <img src="assets/img/rise.png" class="img-responsive" />
-                            </div>
-                            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 event-details">
-                                <h3 class="event-title">
-                                    RISE 2017: Reaching Innovative
-                                    Solutions with Excellence
-                                </h3>
-                                <h4 class="event-date">THU, May 25 4:00 PM</h4>
-                                <h5 class="event-location">Penbrothers, Makati</h5>
-                                <p class="event-price">FREE</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel-footer">
-                        <div class="event-tags">
-                            <p>#TaraNa</p>
-                            <p>#SaliKaNa</p>
-                            <p>#RiseUp</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
+    </table>
 
-
-            <div class="panel panel-primary">
-                <a href="#">
-                    <div class="panel-body">
-                        <div class="row">
-                            <!--    col-sm-8  -->
-                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                                <img src="assets/img/rise.png" class="img-responsive" />
-                            </div>
-                            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 event-details">
-                                <h3 class="event-title">
-                                    RISE 2017: Reaching Innovative
-                                    Solutions with Excellence
-                                </h3>
-                                <h4 class="event-date">THU, May 25 4:00 PM</h4>
-                                <h5 class="event-location">Penbrothers, Makati</h5>
-                                <p class="event-price">FREE</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel-footer">
-                        <div class="event-tags">
-                            <p>#TaraNa</p>
-                            <p>#SaliKaNa</p>
-                            <p>#RiseUp</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <br><br><br><br>
-
-        </div>
     </div>
-</div>
-</div>
-
 
 
 
