--- a/QBO Events Management/Content/additional/qboAdmin.css
+++ b/QBO Events Management/Content/additional/qboAdmin.css
@@ -1,61 +1,14 @@
 ﻿body {
 	background: #f8f9f9;
-	font-family: Raleway;
+	font-family: 'Raleway', 'Open Sans';
 	letter-spacing: 2px;
 }
-
-
-.navbar {
-	background: black;
-}
-
-.navbar-default {
-	border-color: black;
-}
-
-.navbar-inverse .navbar-nav > li > a {
-	color: #03c4eb;
-	font-size: 12px;
-	letter-spacing: 3px;
-	font-weight: 600;
-	text-transform: uppercase;
-}
-
-.navbar-fixed-left {
-	width: 200px;
-	position: fixed;
-	border-radius: 0;
-	height: 100%;
-}
-
-.navbar-fixed-left .navbar-nav > li {
-		float: none; /* Cancel default li float: left */
-		width: 139px;
-	}
-
-.navbar-fixed-left + .container {
-		padding-left: 160px;
-	}
-
-	/* On using dropdown menu (To right shift popuped) */
-	.navbar-fixed-left .navbar-nav > li > .dropdown-menu {
-		margin-top: -50px;
-		margin-left: 140px;
-	}
-
 
 .logo {
 	margin: 5px;
 	width: 100px;
 }
 
-/*.title {
-	text-align: center;
-	color: #03c4eb;
-	font-size: 40px;
-	font-weight: 800;
-	letter-spacing: 5px;
-}*/
 
 .event input {
 	margin-top: 10px;
@@ -102,10 +55,20 @@
 }
 
 th {
+	/*font-family: 'Helvetica';*/
 	background: #03c4eb;
 	color: white;
-	text-align: center;
-	text-transform:uppercase;
+	/*text-align: center;*/
+	text-transform: uppercase;
+	/*font-weight: 800;*/
+}
+
+td {
+	/*font-family: 'Helvetica';*/
+	/*font-size: 15px;*/
+	color: black;
+	/*text-align:center;*/
+	/*font-weight: 600;*/
 }
 
 
@@ -121,4 +84,121 @@ label {
 	text-transform: uppercase;
 	font-weight:300;
 
+}
+
+.navbar-inverse .navbar-nav > li > a {
+	color: #03c4eb;
+	font-size: 12px;
+	letter-spacing: 3px;
+	font-weight: 600;
+	text-transform: uppercase;
+}
+
+.table>tbody>tr>td>a {
+	margin:2px;
+	border-radius:0px;
+
+}
+
+
+
+
+.details {
+	margin-top: 100px;
+}
+
+	.details input, .details select {
+		margin-top: 25px;
+		margin-bottom: 25px;
+		padding: 10px;
+		padding-top: 15px;
+		padding-bottom:15px;
+		line-height: 50;
+		font-size: 15px;
+		/*text-transform: uppercase;*/
+		font-weight: 600;
+		background-color: #f2f2f2;
+		border-bottom: 1px solid #fff;
+		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+		-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+		-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+		-o-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+	}
+
+	.details button {
+		background: #03c4eb;
+		border: none;
+		display: inline-block;
+		color: #FFFFFF;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		line-height: 1;
+		text-align: center;
+		padding: 15px 23px 15px 23px;
+		font-weight: 600;
+		font-size: 13px;
+	}
+
+
+
+
+
+
+/*profile*/
+
+#profile {
+	background: #03c4eb;
+	color: white;
+}
+
+	#profile .name {
+		letter-spacing: 3px;
+		font-weight: 800;
+	}
+
+	#profile img {
+		margin-top: 30px;
+		margin-bottom: 10px;
+	}
+
+.info h3, .info h4 {
+	display: inline;
+}
+
+	.info h4:after {
+		content: ' ';
+		margin: 15px;
+		display: block;
+	}
+
+
+
+
+#addinfo h2 {
+	text-transform: uppercase;
+	letter-spacing: 3px;
+	font-weight: 800;
+}
+
+.underline {
+	margin-top: 20px;
+	border-bottom: 3px solid white;
+	padding-bottom: 7px;
+}
+
+.underline2 {
+	margin-top: 20px;
+	border-bottom: 3px solid black;
+	padding-bottom: 7px;
+}
+
+
+.custombtn {
+	border: 1px solid white;
+	background: transparent;
+	padding: 15px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	margin: 5px;
+	margin-bottom: 15px;
 }
