--- a/QBO Events Management/Views/Shared/_AdminLayout.cshtml
+++ b/QBO Events Management/Views/Shared/_AdminLayout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title - Admin</title>
+    <title>QBO - @ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/additional/qboAdmin.css")
     @Scripts.Render("~/bundles/modernizr")
@@ -15,37 +15,60 @@
 
 
 
-    <div class="navbar navbar-inverse navbar-fixed-left">
-        <a class="navbar-brand" href="#">
-            <img src="@Url.Content("~/Content/img/logo.png")" class="img-responsive" alt="Image" />
-        </a>
-        <ul class="nav navbar-nav">
-        @if (Request.IsAuthenticated)
-        {
-            using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    @*<div class="navbar navbar-inverse navbar-fixed-left">
+            <a class="navbar-brand" href="#">
+                <img src="@Url.Content("~/Content/img/logo.png")" class="img-responsive" alt="Image" />
+            </a>
+            <ul class="nav navbar-nav">
+            @if (Request.IsAuthenticated)
             {
-                @Html.AntiForgeryToken()
-            <li><a href="#">Hello, @User.Identity.GetUserName() !</a></li>
-            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-            <li>@Html.ActionLink("Create Event", "Create")</li>
-            <li>@Html.ActionLink("View Event", "Index")</li>
-            <li><a href="#">Link5</a></li>
+                using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+                {
+                    @Html.AntiForgeryToken()
+                <li><a href="#">Hello, @User.Identity.GetUserName() !</a></li>
+                <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+                <li>@Html.ActionLink("Create Event", "Create")</li>
+                <li>@Html.ActionLink("View Event", "Index")</li>
+                <li><a href="#">Link5</a></li>
+                }
             }
-        }
-        </ul>
+            </ul>
+        </div>*@
+
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <img src="@Url.Content("~/Content/img/logo.png")" class="img-responsive logo" alt="Image" />
+                @*@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Events", "ListOfEvents", "Events")</li>
+                    <li>@Html.ActionLink("HQ", "About", "Home")</li>
+                    @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                </ul>
+                @Html.Partial("_LoginPartial")
+            </div>
+        </div>
     </div>
 
-    
 
-    <div class="container body-content">
+
+    <div class="body-content">
+
         @RenderBody()
 
     </div>
 
 
 
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
-        @RenderSection("scripts", required: false)
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
 </body>
 </html>
