--- a/QBO Events Management/Views/Events/AddAttendee.cshtml
+++ b/QBO Events Management/Views/Events/AddAttendee.cshtml
@@ -8,7 +8,7 @@
     <br /><br /><br /><br />
     <div class=" col-lg-6">
         <br>
-        <a class="btn btn-primary" href="@Url.Action("Attendees")">Go Back</a>
+        <a class="btn btn-primary" href="@Url.Action("ListOfEvents")">Go Back</a>
         <br /><br />
         <img src="@Url.Content("~/Content/img/camera.png")" width="500" class="img-responsive" />
     </div>
@@ -36,7 +36,7 @@
                 <option>Other</option>
             </select>
 
-            <button class="btn btn-default" data-toggle="modal" data-target="#myModal">Save</button>
+            <button class="btn btn-default">Save</button>
         </div>
     </div>
 </div>
