--- a/QBO Events Management/Views/Events/Profile.cshtml
+++ b/QBO Events Management/Views/Events/Profile.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewBag.Title = "Profile";
+
 }
 
-<br /><br /><br /><br />
 <div id="profile">
     <div class="container">
         <div class="row">
@@ -13,7 +14,7 @@
                     <button class="custombtn">Go Back</button>
                 </form>
             </div>
-            <div class="col-lg-offset-1 col-lg-6">
+            <div class="col-lg-8">
 
                 <h1 class="name underline">Joseph Manalo (Explorer)</h1>
 
@@ -46,7 +47,7 @@
 <div id="addinfo">
     <div class="container">
         <div class="row">
-            <div class="col-lg-offset-1 col-lg-11">
+            <div class="col-lg-12">
                 <h2 class="underline2">Additional Information</h2>
                 <div class="col-lg-6">
                     <h3><b>Company/Organization:</b>  </h3><h4>De La Salle - College of Saint Benilde</h4>
