--- a/QBO Events Management/Views/Events/Attendees.cshtml
+++ b/QBO Events Management/Views/Events/Attendees.cshtml
@@ -12,7 +12,7 @@
 
     <div class="col-lg-3">
         <a class="btn btn-primary" href="@Url.Action("ListOfEvents")">Go Back</a>
-        <a class="btn btn-primary" href="@Url.Action("AddAttendee")"><i class="fa fa-user-circle"></i> Add Walk-in</a>
+        <a class="btn btn-success" href="@Url.Action("AddAttendee")"><i class="fa fa-user-circle"></i> Add Walk-in</a>
     </div>
 
     <div class="col-lg-6">
@@ -29,7 +29,7 @@
     </div>
 
     <br /><br /><br />
-    <table class="table table-hover table-responsive">
+    <table class="table table-hover table-responsive" id="attendeeTable">
         <thead>
             <tr>
                 <th>
@@ -72,6 +72,20 @@
     </table>
 
 </div>
+
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('#attendeeTable').dataTable();
+
+        });
+
+
+    </script>
+
+}
+
 
 
 
