--- a/QBO Events Management/Views/Events/ListOfEvents.cshtml
+++ b/QBO Events Management/Views/Events/ListOfEvents.cshtml
@@ -31,32 +31,21 @@
 
         <br><br><br>
 
-        <table class="table table-bordered table-hover table-responsive">
+        <table class="table table-bordered table-hover table-responsive" id="eventTable">
             <thead>
                 <tr>
-                    @*<th>
-                            @Html.DisplayNameFor(model => model.ID)
-                        </th>*@
                     <th>
 
                     </th>
                     <th>
-                        @*@Html.DisplayNameFor(model => model.Names)*@
                         Title
                     </th>
                     <th>
-                        @*@Html.DisplayNameFor(model => model.Descriptions)*@
                         Description
                     </th>
                     <th>
                         Start-End Date
                     </th>
-                    @*<th>
-                            @Html.DisplayNameFor(model => model.Start)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.End)
-                        </th>*@
                     <th>
                         @Html.DisplayNameFor(model => model.Created)
                     </th>
@@ -78,10 +67,14 @@
                     <tr>
 
                         <td>
-                            @*@if (item.Images.Original.ImgUrl != null)
-                                {
-                                   <img src="@item.Images.Original.ImgUrl" width="200" class="img-responsive" />
-                                 }*@
+                            @if (item.Images == null)
+                            {
+                                @*<img src="@Url.Content("~/Content/img/default.png")" width="300" class="img-responsive" />*@
+}
+                            else 
+                            {
+                                <img src="@item.Images.Original.ImgUrl" width="200" class="img-responsive" />
+}
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Names.Text)
@@ -123,6 +116,17 @@
 
 
 
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('#eventTable').dataTable();
+
+        });
+
+
+    </script>
+   
+    }
 
 
 
