--- a/QBO Events Management/Views/Participants/Create.cshtml
+++ b/QBO Events Management/Views/Participants/Create.cshtml
@@ -16,16 +16,18 @@
         <h4>Participant</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Event.ID)
-
+        @Html.HiddenFor(model => model.EventsID)
+        
+        @*
         <div class="form-group">
-            @Html.LabelFor(model => model.Event.ID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.EventsID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Event.ID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Event.ID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.EventsID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.EventsID, "", new { @class = "text-danger" })
             </div>
         </div>
-        @*
+        *@
+
         <div class="form-group">
             @Html.LabelFor(model => model.Person.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -61,21 +63,35 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Person.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="checkbox">
+                @*<div class="checkbox">
                     @Html.EditorFor(model => model.Person.Gender)
                     @Html.ValidationMessageFor(model => model.Person.Gender, "", new { @class = "text-danger" })
-                </div>
+                </div>*@
+                <input type="radio" name="Person.Gender" id="Person.Gender_F" value="false" /><label for="Gender_F">&nbsp;Female</label>
+                &nbsp;
+                <input type="radio" name="Person.Gender" id="Person.Gender_M" value="true" /><label for="Gender_M">&nbsp;Male</label>
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Person.Sector, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Person.Sector, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Person.Sector, "", new { @class = "text-danger" })
+                @*@Html.EditorFor(model => model.Person.Sector, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Person.Sector, "", new { @class = "text-danger" })*@
+                <select name="Person.Sector" id="Person.Sector" class="form-control">
+                    <option value="Startup">Startup</option>
+                    <option value="Student">Student</option>
+                    <option value="Academe">Academe</option>
+                    <option value="Government">Government</option>
+                    <option value="Media">Media</option>
+                    <option value="Investor">Investor</option>
+                    <option value="Startup Enabler/Accelerator,/Incubator">Startup Enabler/Accelerator/Incubator</option>
+                    <option value="Private Sector">Private Sector</option>
+                    <option value="Other">Other</option>
+                </select>
             </div>
         </div>
-        *@
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
