--- a/QBO Events Management/Views/Shared/_AdminLayout.cshtml
+++ b/QBO Events Management/Views/Shared/_AdminLayout.cshtml
@@ -30,7 +30,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Events", "ListOfEvents", "Events")</li>
-                    <li>@Html.ActionLink("HQ", "ListOfEvents", "Events")</li>
+                    <li>@Html.ActionLink("HQ", "Index", "HQ")</li>
+                    <li>@Html.ActionLink("People", "Index", "People")</li>
                     @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
